New landing page design

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,63 +1,226 @@
-<div class="row mt-5 pt-5">
-  <div class="col text-center">
-    <!--Section: Features v.2-->
-    <section class="section feature-box">
+<div class="container card" style="background-color: rgb(223, 233, 255)">
+<!-- Header-Section -->
+<div id="header" class="header">
+    <div class="container" >
+        <div class="row">
+            <div class="col-lg-12 col-md-12 text-center"> 
+                <div class="headingtext">
+                <h1>EventPickKing </h1>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+                    sed diam nonumy eirmod tempor invidunt
+                </p>
+                <button class="btn btn-outline-info btn-rounded waves-effec" style="margin-left:200px">Sign Up Now</button>
+                <button class="btn btn-outline-info btn-rounded waves-effec" style="margin-right:30px">Find your Event</button>
+                </div>
+            </div> <!--col1-end-->
 
-      <!--Section heading-->
-      <h1 class="section-heading pt-4">Why is it so great?</h1>
+            <!-- <div class="col-lg-6 col-md-6">
+                <img src="http://www.jeffreythompson.org/blog/wp-content/uploads/2012/07/DesktopWallpaperByChrisJaurique-web.png)" alt="" class="pull-left">                   
+            </div> col2-end -->
+        </div> <!--row-end-->
+    </div> <!--container-end-->
+</div> 
+<!--Header-end-->
 
-      <!--Section description-->
-      <p class="section-description lead grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, error amet numquam iure provident voluptate esse quasi,
-        veritatis totam voluptas nostrum quisquam eum.</p>
-
-      <!--Grid row-->
-      <div class="row features-small">
-
-        <!--Grid column-->
-        <div class="col-md-4 mb-r">
-          <div class="col-1 col-md-2 float-left">
-            <i class="fa fa-bullhorn blue-text"></i>
-          </div>
-          <div class="col-10 col-md-9 col-lg-10 float-right">
-            <h4 class="feature-title">Marketing</h4>
-            <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda.</p>
-            <a class="btn btn-primary btn-sm ml-0">Learn more</a>
-          </div>
+<div id ="description" class="description">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 col-md-12 text-center">
+                <h1>Description</h1>
+                    <div class="text">
+                        <p>Events ablegen, Bilder hochladen, teilen und verkaufen!</p>
+                        <br>
+                        <p>Verkaufen sie unsere Fotos schnell über unser Portal. Wir kümmern uns um Zahlungsabwicklung, Produktion und Versand.</p>
+                        <br>
+                        <p>Sie machen die Bilder und wir den Rest!</p>
+                    </div>
+            </div>
         </div>
-        <!--Grid column-->
+    </div>
 
-        <!--Grid column-->
-        <div class="col-md-4 mb-r">
-          <div class="col-1 col-md-2 float-left">
-            <i class="fa fa-cogs pink-text"></i>
-          </div>
-          <div class="col-10 col-md-9 col-lg-10 float-right">
-            <h4 class="feature-title">Customization</h4>
-            <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda.</p>
-            <a class="btn btn-pink btn-sm ml-0">Learn more</a>
-          </div>
-        </div>
-        <!--Grid column-->
+</div> 
+<!--Description-end-->
 
-        <!--Grid column-->
-        <div class="col-md-4 mb-r">
-          <div class="col-1 col-md-2 float-left">
-            <i class="fa fa-dashboard purple-text"></i>
-          </div>
-          <div class="col-10 col-md-9 col-lg-10 float-right">
-            <h4 class="feature-title">Support</h4>
-            <p class="grey-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores nam, aperiam minima assumenda.</p>
-            <a class="btn btn-secondary btn-sm ml-0">Learn more</a>
-          </div>
-        </div>
-        <!--Grid column-->
+<!--Best Picture Section: Shows best rated pictures -->
+<div id="gallery" class="gallery">
+    <div class="container">
+            <h2>{{'TEXTS.LANDING_BESTPICTURES' | translate}}</h2>
+            <p>Images will load as you scroll down!
+            </p>            
+     </div>  <!-- end-container -->
+     <div class="container card">
+         <div class="card-body" style="height:500px; overflow-y: auto">
+                <div class="col-md-12">
+                <div class="row">
+                <hr>
+                
+                    <div class="gal">
 
-      </div>
-      <!--Grid row-->
+                        <div class="subtitle">                   
+                        <img class src="https://nadjaosieka.de/wp-content/uploads/2016/05/Fotobox-Loerrach-Basel-Fotograf-705x470.jpg" alt="">                              
+                        <span>300 Likes</span>
+                        </div>
+                    
+                        <div class="subtitle"> 
+                        <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
+                        <span>300 Likes</span>
+                        </div>
+                        
+                            <div class="subtitle">
+                            <img src="http://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
+                            <span>300 Likes</span>
+                            </div>
 
-    </section>
-    <!--Section: Features v.2-->
+                            <div class="subtitle">
+                            <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
+                            <span>300 Likes</span>
+                            </div>
+                            
+                            
+                            <div class="subtitle">
+                            <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+                            <span>300 Likes</span>
+                           </div>
+
+                                <div class="subtitle">
+                                <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt="">
+                                <span>300 Likes</span>
+                                </div>
+                            
+                            <div class="subtitle">    
+                            <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+                            <span>300 Likes</span>
+                            </div>
 
 
-  </div>
-</div>
+                                <div class="subtitle">    
+                                <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
+                                <span>300 Likes</span>
+                                </div>
+
+                                <div class="subtitle">    
+                                <img src="http://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
+                                <span>300 Likes</span>
+                                </div>
+
+                                <div class="subtitle">    
+                                <img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt=""><img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt="">
+                                <span>300 Likes</span>
+                                </div>
+
+                                <div class="subtitle">    
+                                <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+                                <span>300 Likes</span>
+                                </div>
+                                
+                                <div class="subtitle">  
+                                <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+                                <span>300 Likes</span>
+                                </div>
+
+                                <div class="subtitle">  
+                                <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+                                <span>300 Likes</span>
+                                </div>
+
+                                <div class="subtitle">  
+                                <img src="https://www.curt.de/nbg/images/thumbs/450_news_news_2014_buntes_treiben_das_holi_festival_web_holi_c_steffenoliverriese.jpg" alt="">
+                                <span>300 Likes</span>
+                                </div>
+
+                                    <div class="subtitle">  
+                                    <img src="http://radiient.com/c/geraumiges-tolles-hochzeitsdeko-tisch-hochzeit-dekoration-tisch-comforafrica.jpg" alt="">
+                                    <span>300 Likes</span>
+                                    </div>
+
+                                        <div class="subtitle">  
+                                        <img src="https://preview.ibb.co/mysOxk/3.jpg" alt="">
+                                        <span>300 Likes</span>
+                                        </div>
+
+                                        <div class="subtitle">  
+                                        <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+                                        <span>300 Likes</span>
+                                        </div>
+                                <!-- <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+                                <img src="https://preview.ibb.co/i0PmHk/1.jpg" alt="">
+                                <img src="https://preview.ibb.co/mWpE3Q/2.jpg" alt=""> -->
+                                
+                    </div>
+                    
+                </div>
+                </div>
+         </div> <!--end-card-body-->
+
+     </div> <!--end-container-->
+
+</div> <!--end-gallery-->
+
+    <!--Testimonial-Section-->
+<div id="testimonial" class="testimonial">
+        <div class="container">
+                <h2>Testimonials</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+                </p>
+            <div class="row">           
+                <div class="col-md-4 mb-r">
+                     <div class="avatar">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(1).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
+                     </div>
+                    <h4 class="mb-3">Anna Deynah</h4>
+                    <h6 class="mb-3 font-bold grey-text">Web Designer</h6>
+                    <p><i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+                    <i class="fa fa-quote-right"></i></p>
+                    <div class="orange-text" style="margin-top: 30px">
+                        <i class="fa fa-star"> </i>
+                        <i class="fa fa-star"> </i>
+                        <i class="fa fa-star"> </i>
+                        <i class="fa fa-star"> </i>
+                        <i class="fa fa-star-half-full"> </i>
+                    </div><!--review1-end-->
+                </div> <!--col1-end-->
+    
+                <div class="col-md-4 mb-r">
+                    <div class="avatar">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
+                    </div>
+                        <h4 class="mb-3">Joe Dohe</h4>
+                        <h6 class="mb-3 font-bold grey-text">Photographer</h6>
+                        <p><i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                            Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+                        <i class="fa fa-quote-right"></i></p>
+                        <div class="orange-text"  style="margin-top: 30px">
+                            <i class="fa fa-star"> </i>
+                            <i class="fa fa-star"> </i>
+                            <i class="fa fa-star"> </i>
+                            <i class="fa fa-star-half-full"> </i>
+                            <i class="fa fa-star-empty"> </i>
+                        </div><!--review2-end-->
+                    </div> <!--col2-end-->
+    
+                    <div class="col-md-4 mb-r">
+                        <div class="avatar">
+                            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded-circle z-depth-1 img-fluid" alt="">
+                        </div> 
+                            <h4 class="mb-3">Maria Kate</h4>
+                            <h6 class="mb-3 font-bold grey-text">Wedding Planner</h6>
+                            <p><i class="fa fa-quote-left"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Quod eos id officiis hic tenetur quae quaerat ad velit ab hic tenetur.
+                            <i class="fa fa-quote-right"></i></p>
+                            <div class="orange-text"  style="margin-top: 30px">
+                                <i class="fa fa-star"> </i>
+                                <i class="fa fa-star"> </i>
+                                <i class="fa fa-star"> </i>
+                                <i class="fa fa-star"> </i>
+                                <i class="fa fa-star"> </i>
+                            </div><!--review3-end-->
+                        </div> <!--col3-end-->
+            </div><!--row-end-->
+        </div><!--container-end-->
+    </div>
+    <!--Testimonial-End-->
+</div> <!--end-bigcontainer-->
+
+
