--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -1,17 +1,50 @@
 <div class="card">
-  <h3 class="card-header primary-color white-text">Eventnummer</h3>
+  <h3 class="card-header indigo white-text">Eventnummer</h3>
   <div class="card-body">
-    <h4 class="card title">Datum und Ort</h4>
+    <h4 class="card-title">Datum und Ort</h4>
     <p class="card-text">Beschreibung des Events</p>
   </div>
 </div>
+<br>
+<br>
 <nav id = "main_menu">
-  <mdb-tabset #staticTabs [buttonClass]="'nav-tabs tabs-3'" [contentClass]="'card'">
+  <mdb-tabset [buttonClass]="'nav-tabs tabs-3 indigo'" [contentClass]="''">
     <mdb-tab heading="Alle Bilder">
       <div class="row">
         <div class="col-12">
           <br>
-          <p>Hallo i bims</p>
+          <table>
+            <td><div class= "card align-items-center">
+              <img class = "img-fluid" src = "https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg" width ="328" height = "250" alt = "Card image cap" div class="box1">
+              <div class="card-body">
+                <table>
+                  <td><a href="#" class="btn btn-primary waves-light indigo" id="Button_Bild1_markieren"mdbRippleRadius><i class="fa fa-star" aria-hidden="true"></i></a></td>
+                  <td><a href="#" class="btn btn-primary waves-light indigo" id="Button_Bild1_liken"mdbRippleRadius><i class="fa fa-heart" aria-hidden="true"></i></a></td>
+                  <td><a href="#" class="btn btn-primary waves-light indigo" id="Button_Bild1_melden"mdbRippleRadius><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a></td>
+                </table>  
+              </div>
+            </div></td>
+            <td><div class= "card align-items-center">
+              <img class = "img-fluid" src = "https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg" width ="328" height = "250" alt = "Card image cap" div class="box1">
+              <div class="card-body">
+                  <table>
+                      <td><a href="#" class="btn btn-primary waves-light indigo" id="Button_Bild2_markieren"mdbRippleRadius><i class="fa fa-star" aria-hidden="true"></i></a></td>
+                      <td><a href="#" class="btn btn-primary waves-light indigo" id="Button_Bild2_liken"mdbRippleRadius><i class="fa fa-heart" aria-hidden="true"></i></a></td>
+                      <td><a href="#" class="btn btn-primary waves-light indigo" id="Button_Bild2_melden"mdbRippleRadius><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a></td>
+                    </table>
+              </div>
+            </div></td>
+            <td><div class= "card align-items-center">
+              <img class = "img-fluid" src = "https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg" width ="328" height = "250" alt = "Card image cap" div class="box1">
+              <div class="card-body">
+                  <table>
+                      <td><a href="#" class="btn btn-primary waves-light indigo" id="Button_Bild3_markieren"mdbRippleRadius><i class="fa fa-star" aria-hidden="true"></i></a></td>
+                      <td><a href="#" class="btn btn-primary waves-light indigo" id="Button_Bild3_liken"mdbRippleRadius><i class="fa fa-heart" aria-hidden="true"></i></a></td>
+                      <td><a href="#" class="btn btn-primary waves-light indigo" id="Button_Bild3_melden"mdbRippleRadius><i class="fa fa-exclamation-triangle" aria-hidden="true"></i></a></td>
+                    </table>
+              </div>
+            </div></td>
+          </table>
         </div>
       </div>
     </mdb-tab>
@@ -19,20 +52,12 @@
       <div class="row">
         <div class="col-12">
           <br>
-          <p>Hallo i bims 2.0</p>
+          <p>Hallo i bims</p>
         </div>
       </div>
     </mdb-tab>
   </mdb-tabset>   
 </nav>
 <section id = "main_section">
-  <button type="button" class="btn btn-outline-primary btn rounded" mdbRippleRadius>Gesamtes Element auswählen</button>
-  <table>
-    <td><div class= "card">
-      <img class = "img-fluid" src = "https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg" width ="400" height = "500" alt = "Card image cap"></div></td>
-    <td><div class= "card">
-      <img class = "img-fluid" src = "https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg" width ="400" height = "500" alt = "Card image cap"></div></td>
-    <td><div class= "card">
-      <img class = "img-fluid" src = "https://www.spiritjourneysworldwide.com/wp-content/uploads/2016/12/scotland-1761292_1280.jpg" width ="400" height = "500" alt = "Card image cap"></div></td>
-  </table>
+  <!-- Hier kp (Body)-->
 </section>
