--- a/src/app/components/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/components/dashboard-admin/dashboard-admin.component.html
@@ -166,7 +166,7 @@
               <mdb-item-head>Product Prices</mdb-item-head>
               <mdb-item-body>
                 <br>
-                <mdb-tabset [buttonClass]="'nav-tabs tabs-3 indigo'">
+                <mdb-tabset [buttonClass]="'nav-tabs  indigo'">
                   <mdb-tab heading="Photo">
                     <div class="row">
                       <div class="col-12">
