--- a/src/app/components/event-photographer/event-photographer.component.html
+++ b/src/app/components/event-photographer/event-photographer.component.html
@@ -1,3 +1,36 @@
-<p>
-  event-photographer works!
-</p>
+<mdb-tabset #staticTabs [buttonClass]="'nav-tabs indigo'" [contentClass]="'card'">
+  <mdb-tab heading="{{ 'TABS.GALLERY' | translate }}">
+    <div class="row">
+      <div class="col-12">
+        <br>
+      </div>
+    </div>
+  </mdb-tab>
+  <mdb-tab heading="{{ 'TABS.EDIT_IMAGES' | translate }}">
+    <div class="row">
+      <div class="col-12">
+        <br>
+        <div class="table-responsive">
+          <table class="table">
+            <thead></thead>
+            <tbody></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </mdb-tab>
+  <mdb-tab heading="{{ 'TABS.UPLOAD' | translate }}">
+    <div class="row">
+      <div class="col-12">
+        <br>
+      </div>
+    </div>
+  </mdb-tab>
+  <mdb-tab heading="{{ 'TABS.EVENT_SETTINGS' | translate }}">
+    <div class="row">
+      <div class="col-12">
+        <br>
+      </div>
+    </div>
+  </mdb-tab>
+</mdb-tabset>
