--- a/src/app/pages/photographer-page/photographer-page.component.html
+++ b/src/app/pages/photographer-page/photographer-page.component.html
@@ -5,7 +5,7 @@
       <hr>
       <div class="row">
         <div class="col-12 col-sm-3">
-          <img src="{{photographer?.photoURL}}" alt="Bild nicht verfügbar" class="img-fluid rounded-circle z-depth-2">
+          <img src="{{photographer?.photoUrl}}" alt="Bild nicht verfügbar" class="img-fluid rounded-circle z-depth-2">
         </div>
         <div id="authorData" class=" col-12 col-sm-9">
           <p>
