--- a/src/app/pages/shopping-cart/shopping-cart.component.html
+++ b/src/app/pages/shopping-cart/shopping-cart.component.html
@@ -69,6 +69,6 @@
     </table>
     <div class="row justify-content-end">
       <button type="button" class="btn btn-primary waves-light col-sm-3" mdbRippleRadius>{{ 'BUTTONS.CONTINUE_SHOPPING' | translate }}</button>
-      <button type="button" class="btn btn-primary waves-light col-sm-3" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
+      <button type="button" class="btn btn-primary waves-light col-sm-3" routerLink="/check-out" mdbRippleRadius>{{ 'BUTTONS.PROCEED_TO_CHECKOUT' | translate }}</button>
     </div>
   </div>
