fixed view for mobilel devices

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -2,16 +2,16 @@
 <!-- Header-Section -->
 <div id="header" class="header">
     <div class="container" >
-        <div class="row">
+        <div class="row ">
             <div class="col-lg-12 col-md-12 text-center"> 
-                <div class="headingtext">
                 <h1>EventPickKing </h1>
                 <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
                     sed diam nonumy eirmod tempor invidunt
                 </p>
-                <button class="btn btn-outline-info btn-rounded waves-effec" style="margin-left:200px">Sign Up Now</button>
-                <button class="btn btn-outline-info btn-rounded waves-effec" style="margin-right:30px">Find your Event</button>
-                </div>
+                <p>
+                <button class="btn btn-outline-info btn-rounded waves-effec">{{ 'BUTTONS.LOGINNOW' | translate }}</button>
+                <button class="btn btn-outline-info btn-rounded waves-effec">{{ 'BUTTONS.LOGINNOW' | translate }}</button>
+            </p>
             </div> <!--col1-end-->
 
             <!-- <div class="col-lg-6 col-md-6">
