--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -98,14 +98,12 @@ p{
 }
 
 .header p{
-    margin-top: 20px;
-    padding-left: 40%;
-    padding-right: 20%;
+    margin-top: 30px;
 }
-.header h1{
-    margin-top: 20px;
-    padding-left: 20%;
-}
+// .header h1{
+//     margin-top: 20px;
+//     // padding-left: 20%;
+// }
 
 .header button{
     margin-top: 30px;
@@ -117,11 +115,16 @@ p{
     margin: 40px, 20px;
 }
 
-.headingtext{
-    position: absolute;
-    left: 300px;
-    top: -50px;
-}
+// .btn-frame{
+//     margin-left:200px;
+//     margin-right:30px;
+// }
+
+// .headingtext{
+//     position: absolute;
+//     left: 300px;
+//     top: -50px;
+// }
 
 @media(max-width: 750px){
     .header{
@@ -138,6 +141,13 @@ p{
     .header btn{
         font-size: 10px;
         margin-left: 20px;
+       
+    }
+
+    .header button{
+        margin-top: 20px;
+        margin-left: 20px;
+        font-size: 10px;
     }
 
     .header h1{
@@ -145,7 +155,14 @@ p{
     }
 
     .header p{
+        margin-top: 10px;
         font-size: 10px;
+    }
+
+    .btn-frame{
+        margin-left:50px;
+        margin-right:10px;
+        align-content: left;
     }
 }//End Header
 
