--- a/src/app/pages/checkout-page/checkout-page.component.html
+++ b/src/app/pages/checkout-page/checkout-page.component.html
@@ -1,6 +1,6 @@
 <div class="row mt-5 pt-5">
-  <div class="col-md-12">
-
+  <!--site-stepper / template-navigation-->
+  <div class="col-sm-12">
     <ul class="stepper stepper-horizontal">
       <li class="{{contactDetailsStatus}}">
         <a (click)="setTemplate('contactDetails')">
@@ -23,18 +23,29 @@
         </a>
       </li>
     </ul>
-    <div class="row mt-5 pt-5">
+    <div class="row m-5">
       <ng-container *ngTemplateOutlet="template"></ng-container>
     </div>
   </div>
+  <!--END site-stepper / template-navigation-->
 
+  <!--checkout-templates-->
   <ng-template #loadingTmpl>
     <mdb-spinner spinnerType="big" spinnerColor="blue"></mdb-spinner>
   </ng-template>
 
   <ng-template #checkoutContactDetails>
     <div>
-      {{ 'LABELS.CONTACT_DETAILS' | translate }}
+      <h2>{{ 'LABELS.CONTACT_DETAILS' | translate }}</h2>
+      <p>-KUNDENEMAIL-</p>
+      <hr class="m-5">
+      <h2>{{ 'LABELS.DELIVERY_ADDRESS' | translate }}</h2>
+      <p>--VORNAME-- --NACHNAME--</p>
+      <p>--STRASSE-- --HAUSNR--</p>
+      <p>--STADT--</p>
+      <p>--PLZ--</p>
+      <p>--LAND--</p>
+
 
     </div>
   </ng-template>
@@ -46,5 +57,5 @@
   <ng-template #checkoutCheckOrder>
     <div>CheckOrder</div>
   </ng-template>
-
+  <!--END checkout-templates-->
 </div>
