--- a/src/app/components/event-user/event-user.component.html
+++ b/src/app/components/event-user/event-user.component.html
@@ -49,15 +49,21 @@
       </div>
     </mdb-tab>
     <mdb-tab heading="Markierte Bilder">
-      <div class="row">
-        <div class="col-12">
-          <br>
-          <p>Hallo i bims</p>
+        <div class="row">
+          <div class="col-12">
+            <br>
+            <p>Hallo i bims</p>
+          </div>
         </div>
-      </div>
-    </mdb-tab>
-  </mdb-tabset>   
+      </mdb-tab>
+  </mdb-tabset>  
 </nav>
+<aside id="main_aside" div class="box2">
+    <table>
+      <td><i class="fa fa-th" aria-hidden="true"></i></td> &nbsp;
+      <td><i class="fa fa-th-large" aria-hidden="true"></i></td>
+    </table> 
+</aside>
 <section id = "main_section">
   <!-- Hier kp (Body)-->
 </section>
