--- a/src/app/components/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/components/dashboard-admin/dashboard-admin.component.html
@@ -96,7 +96,7 @@
 
                 <div class="md-form">
                   <input type="text" class="form-control" formControlName="email">
-                  <label class="active">{{ 'INPUTS.EMAIL' | translate }}</label>
+                  <label class="active">{{ 'INPUTS.MAIL' | translate }}</label>
                 </div>
 
                 <div class="md-form">
@@ -180,7 +180,7 @@
                           <tbody>
                             <tr *ngFor="let article of printingHouse.salesTypes.photo.articles">
                               <td>{{ article.name }}</td>
-                              <td>{{ article.minPrice }}€</td>
+                              <td>{{ article.minPrice | number:'1.2-2' }} €</td>
                               <td>
                                 <a>
                                   <i class="fa fa-pencil" aria-hidden="true"></i>
@@ -207,7 +207,7 @@
                           <tbody>
                             <tr *ngFor="let article of printingHouse.salesTypes.download.articles">
                               <td>{{ article.name }}</td>
-                              <td>{{ article.minPrice }}€</td>
+                              <td>{{ article.minPrice | number:'1.2-2' }} €</td>
                               <td>
                                 <a>
                                   <i class="fa fa-pencil" aria-hidden="true"></i>
